--- a/.github/actions/macos_dmg/action.yml
+++ b/.github/actions/macos_dmg/action.yml
@@ -22,6 +22,8 @@ inputs:
   sign_app:
     description: 'Build is performed on the main line'
     required: true
+  cpu_architecture:
+    description: 'Cpu architecture for this build. One of [x86, arm]'
 outputs:
   artifact:
     description: 'Build artifact'
@@ -86,13 +88,13 @@ runs:
       id: dmg
       run: |
         cd _packaging
-        create-dmg --volname "Gaphor ${{ inputs.version }}" \
+        create-dmg --volname "Gaphor ${{ inputs.version }} ${{ inputs.cpu_architecture }}" \
         --background "macos/background.png" \
         --window-pos 200 120 --window-size 700 400 --icon-size 100 \
         --icon "Gaphor.app" 200 240 --hide-extension "Gaphor.app" \
-        --app-drop-link 500 240 "dist/Gaphor-${{ inputs.version }}.dmg" \
+        --app-drop-link 500 240 "dist/Gaphor-${{ inputs.version }}-${{ inputs.cpu_architecture }}.dmg" \
         "dist/Gaphor.app"
-        echo "artifact=Gaphor-${{ inputs.version }}.dmg" >> $GITHUB_OUTPUT
+        echo "artifact=Gaphor-${{ inputs.version }}-${{ inputs.cpu_architecture }}.dmg" >> $GITHUB_OUTPUT
       shell: bash
     - name: Notarize dmg
       if: inputs.sign_app == 'true'
